--- a/Project.toml
+++ b/Project.toml
@@ -1,9 +1,10 @@
-authors = ["Daniel H. Morgan <dhmorgan@protonmail.com>"]
 name = "ScalarTime"
 uuid = "541787ee-c1a9-11e8-15fe-73598bddbdd6"
+authors = ["Daniel H. Morgan <dhmorgan@protonmail.com>"]
 version = "0.1.0"
 
 [deps]
+Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 
 [compat]
 julia = "1.1"
